# simple-duration

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs
